--- a/index.html
+++ b/index.html
@@ -49,24 +49,27 @@
       Free Software LHA implementation
     </div>
 
-    <p>Lhasa is a Free Software replacement for the Unix LHA tool, for decompressing .lzh (LHA / LHarc) and .lzs (LArc) archives.  The backend for the tool is a library, so that it can be reused for other purposes.
+    <p>Lhasa is a Free Software replacement for the Unix LHA tool, for
+       decompressing .lzh (LHA / LHarc) and .lzs (LArc) archives.  The
+       backend for the tool is a library, so that it can be reused for
+       other purposes.
 
-Lhasa aims to be compatible with as many types of lzh/lzs archives as possible.  It also aims to generate the same output as the (non-free) Unix LHA tool, so that it will act as a drop-in free replacement.</p><h2>License</h2>
-<p>ISC license</p>
-<h2>Authors</h2>
-<p>Simon Howard (fraggle@removethistoemailme.gmail.com)<br/><br/>      </p>
+       Lhasa aims to be compatible with as many types of lzh/lzs archives
+       as possible.  It also aims to generate the same output as the
+       (non-free) Unix LHA tool, so that it will act as a drop-in free
+       replacement.
+       
+    </p
+    
+    <h2>License</h2>
+    <p>ISC license</p>
 
+    <h2>Authors</h2>
+    <p>Simon Howard (fraggle@removethistoemailme.gmail.com)</p>
 
     <h2>Download</h2>
-    <p>
-      You can download this project in either
-      <a href="http://github.com/fragglet/lhasa/zipball/master">zip</a> or
-      <a href="http://github.com/fragglet/lhasa/tarball/master">tar</a> formats.
-    </p>
-    <p>You can also clone the project with <a href="http://git-scm.com">Git</a>
-      by running:
-      <pre>$ git clone git://github.com/fragglet/lhasa</pre>
-    </p>
+    The first release (version 0.0.1) can be found on the GitHub downloads
+    page <a href="https://github.com/fragglet/lhasa/downloads">here</a>.
 
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/fragglet/lhasa">fragglet/lhasa</a>
