--- a/index.html
+++ b/index.html
@@ -56,7 +56,6 @@
        as possible.  It also aims to generate the same output as the
        (non-free) Unix LHA tool, so that it will act as a drop-in free
        replacement.
-
     </p>
 
     <h2>License</h2>
@@ -66,8 +65,9 @@
     <p>Simon Howard (fraggle@removethistoemailme.gmail.com)</p>
 
     <h2>Download</h2>
-    The second beta release (version 0.0.2) can be found on the GitHub downloads
-    page <a href="https://github.com/fragglet/lhasa/downloads">here</a>.
+    The latest beta release (version 0.0.3) can be found on
+    the GitHub downloads page
+    <a href="https://github.com/fragglet/lhasa/downloads">here</a>.
 
   </div>
 </body>
