Update page to latest release (v0.1.0)
Also remove Github download icon, move download link to my website.

--- a/index.html
+++ b/index.html
@@ -35,11 +35,6 @@
 
   <div id="container">
 
-    <div class="download">
-      <a href="http://github.com/fragglet/lhasa/downloads">
-        <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
-    </div>
-
     <h1><a href="http://github.com/fragglet/lhasa">lhasa</a>
       <span class="small">by <a href="http://github.com/fragglet">fragglet</a></span></h1>
 
@@ -65,9 +60,8 @@
     <p>Simon Howard (fraggle@removethistoemailme.gmail.com)</p>
 
     <h2>Download</h2>
-    The latest beta release (version 0.0.7) can be found on
-    the GitHub downloads page
-    <a href="https://github.com/fragglet/lhasa/downloads">here</a>.
+    The latest release (version 0.1.0) can be downloaded
+    <a href="http://www.soulsphere.org/projects/lhasa/">here</a>.
 
   </div>
 </body>
