Update download link - v0.3.0.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
     <p>Simon Howard (fraggle@removethistoemailme.gmail.com)</p>
 
     <h2>Download</h2>
-    The latest release (version 0.2.0) can be downloaded
-    <a href="http://www.soulsphere.org/projects/lhasa/">here</a>.
+    The latest release (version 0.3.0) can be downloaded
+    <a href="https://soulsphere.org/projects/lhasa/">here</a>.
 
   </div>
 </body>
