--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
     <h2>Authors</h2>
     <p>Simon Howard (fraggle@removethistoemailme.gmail.com)</p>
 
-    <h2>Download</h2>
-    The latest release (version 0.3.1) can be downloaded
+    <h2>Download Source Code</h2>
+    The latest release (version 0.4.0) can be downloaded
     <a href="https://soulsphere.org/projects/lhasa/">here</a>.
 
   </div>
