Add a second GitHub link.

--- a/index.html
+++ b/index.html
@@ -75,6 +75,11 @@
        (non-free) Unix LHA tool, so that it will act as a drop-in free
        replacement.
     </p>
+    <p>
+       Please report any bugs <a href=https://github.com/fragglet/lhasa">
+       on GitHub</a>, where you can also find the latest changes to the
+       codebase.
+    </p>
 
     <h2>License</h2>
     <p><a href="https://en.wikipedia.org/wiki/ISC_license">ISC license</a>
