Now in OpenBSD ports!

--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
       <li> <b>FreeBSD ports</b>:
       <a href="https://www.freshports.org/archivers/lhasa"><tt>pkg install archivers/lhasa</tt></a>
 
+      <li> <b>OpenBSD ports</b>:
+      <a href="https://cvsweb.openbsd.org/cgi-bin/cvsweb/ports/archivers/lhasa/"><tt>pkg install lhasa</tt></a>   
+
       <li> <b>macOS (Homebrew)</b>:
       <a href="https://formulae.brew.sh/formula/lhasa"><tt>brew install lhasa</tt></a>
 
