Set viewport default scale
Tweak the size of the illustration as well.

--- a/index.html
+++ b/index.html
@@ -4,19 +4,22 @@
 
 <title>Lhasa</title>
 <link rel="stylesheet" href="boring/boring.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
 body {
     background-color: #889ec1;
 }
 #photo {
     float: right;
-    margin: 0 0 30px 3em;
-    width: 250px;
+    padding: 0.5em;
+    margin: 0 0 0.5em 2em;
+    width: 35%;
     font-size: xx-small;
+    text-align: left;
 }
 #photo img {
     margin-bottom: 0.5em;
-    width: 250px;
+    width: 100%;
 }
 </style>
 </head>
